# homework-2-asarogers

./: .gitignore  README.md  citations.txt  frames_2024-10-24_01.02.44.gv  frames_2024-10-24_20.12.50.gv  frames_2024-10-24_20.48.39.gv
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/turtle_brick/share/turtle_brick/: my_robot_config.rviz  package.sh  show_turtle.launch.py
install/turtle_brick_interfaces/include/turtle_brick_interfaces/turtle_brick_interfaces/msg/: brick_dropped.h  brick_dropped.hpp  rosidl_generator_cpp__visibility_control.hpp  turtle_location.h  turtle_location.hpp
install/turtle_brick_interfaces/include/turtle_brick_interfaces/turtle_brick_interfaces/msg/detail/: brick_dropped__builder.hpp  brick_dropped__functions.c  brick_dropped__rosidl_typesupport_fastrtps_cpp.hpp  brick_dropped__traits.hpp  brick_dropped__type_support.c  brick_dropped__type_support.h  brick_dropped__type_support.hpp  brick_location__description.c  brick_location__functions.c  brick_location__rosidl_typesupport_fastrtps_c.h  brick_location__traits.hpp  brick_location__type_support.cpp  brick_location__type_support.h  tilt__builder.hpp  tilt__functions.h  tilt__type_support.c  tilt__type_support.cpp  tilt__type_support.hpp  turtle_location__builder.hpp  turtle_location__description.c  turtle_location__functions.h  turtle_location__rosidl_typesupport_fastrtps_cpp.hpp  turtle_location__rosidl_typesupport_introspection_cpp.hpp  turtle_location__struct.h  turtle_location__struct.hpp  turtle_location__type_support.c
install/turtle_brick_interfaces/include/turtle_brick_interfaces/turtle_brick_interfaces/srv/: place.hpp  stop_gravity.h
install/turtle_brick_interfaces/include/turtle_brick_interfaces/turtle_brick_interfaces/srv/detail/: place__description.c  place__functions.h  place__rosidl_typesupport_fastrtps_cpp.hpp  place__struct.hpp  place__traits.hpp  place__type_support.c  place__type_support.h  provide_goal_pose__builder.hpp  provide_goal_pose__rosidl_typesupport_introspection_c.h  provide_goal_pose__rosidl_typesupport_introspection_cpp.hpp  provide_goal_pose__struct.hpp  provide_goal_pose__type_support.cpp  provide_goal_pose__type_support.h  provide_goal_pose__type_support.hpp  stop_gravity__functions.c  stop_gravity__rosidl_typesupport_fastrtps_c.h  stop_gravity__rosidl_typesupport_introspection_cpp.hpp  stop_gravity__struct.hpp  stop_gravity__traits.hpp
install/turtle_brick_interfaces/share/ament_index/resource_index/rosidl_interfaces/: turtle_brick_interfaces
install/turtle_brick_interfaces/share/turtle_brick_interfaces/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/turtle_brick_interfaces/share/turtle_brick_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_targets-extras.cmake  export_turtle_brick_interfaces__rosidl_generator_cppExport.cmake  export_turtle_brick_interfaces__rosidl_generator_pyExport.cmake  export_turtle_brick_interfaces__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_turtle_brick_interfaces__rosidl_typesupport_fastrtps_cppExport.cmake  turtle_brick_interfaces__rosidl_typesupport_cExport-noconfig.cmake  turtle_brick_interfaces__rosidl_typesupport_cExport.cmake  turtle_brick_interfaces__rosidl_typesupport_cppExport-noconfig.cmake  turtle_brick_interfaces__rosidl_typesupport_introspection_cExport-noconfig.cmake  turtle_brick_interfaces__rosidl_typesupport_introspection_cppExport-noconfig.cmake
install/turtle_brick_interfaces/share/turtle_brick_interfaces/msg/: BrickDropped.msg  Tilt.json  Tilt.msg
install/turtle_brick_interfaces/share/turtle_brick_interfaces/srv/: Place.idl  StopGravity.srv
log/: latest_build
turtle_brick/: package.xml  setup.cfg  setup.py
turtle_brick/config/: my_robot_config.rviz  turtle.yaml
turtle_brick/launch/: display.launch.py  show_turtle.launch.py
turtle_brick/test/: testWorld.py
turtle_brick/turtle_brick/: arena.py  baselinkToRobot.py  catcher.py  physics.py  turtle_robot.py  worldFrame.py  worldFrameToBaseFootprint.py
turtle_brick/urdf/: my_robot.urdf  turtle.urdf.xacro
turtle_brick_interfaces/: CMakeLists.txt  package.xml
video/: catchBrick.webm  failToCatch.webm
