<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtle_brick</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="cyberasasoftware@gmail.com">asaace00</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>ros2launch</exec_depend>

    <exec_depend>turtle_brick_interfaces</exec_depend>
  <build_depend>turtle_brick_interfaces</build_depend>

    <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

    <build_depend>geometry_msg</build_depend>
  <exec_depend>geometry_msg</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
